--- a/scss/base/base.scss
+++ b/scss/base/base.scss
@@ -4,6 +4,7 @@
 	box-sizing: border-box;
 }
 
+
 body {
 	/* background: $clear-blue;
 	background: linear-gradient(to right, $clear-blue, $clear-green); */
@@ -13,6 +14,7 @@ body {
 
 	height: 100vh;
 	width: 100vw;
+	overflow-x: hidden;
 	@include font-styles($family: $font-stack-primary, $color: $white, $weight: #{normal}, $lh: 1.5);
 } 
 
@@ -31,12 +33,3 @@ ul, ol {
 	padding-left: 0;
 }
 
-// Poke base
-
-.poke-wrap {  // wraps whole poke page
-	/* background: $dark-blue-grey;
-	background: linear-gradient(to right, $dark-blue-grey, $light-blue-grey); */
-	background: $kashmir-grey;
-	background: linear-gradient(to top, $kashmir-grey, $kashmir-purple);
-	height: 100vh;
-}
