--- a/scss/layout/landing.scss
+++ b/scss/layout/landing.scss
@@ -115,7 +115,29 @@
 // gallery select to fixed styles
 .bubble-stick {
 	position: fixed;
-	bottom: 0;
+	bottom: 2em;
 	z-index: 50;
 	border: none;
+	height: 8em;
+	width: 8em;
+	border: 1px solid;
+	transform: rotate(0);
+	animation: none;
+	@media (min-width: $break-m) {
+		left: 2em;
+	}
+	.box {
+		height: 2.5em;
+		width: 2.5em;
+		animation: none;
+	}
+	h2 {
+		font-size: .8rem;
+		background: $dark;
+		border-radius: 50%;
+		@include transition(all .4s ease);
+		&:hover {
+			transform: scale(1.1);
+		}
+	}
 }
